@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-18T00:58:06Z",
+  "timestamp" : "2025-11-19T00:58:18Z",
   "count_outdated" : 586,
   "uniques_outdated" : 412,
-  "count" : 588,
-  "uniques" : 414,
+  "count" : 589,
+  "uniques" : 415,
   "clones" : [
     {
       "timestamp": "2025-11-09T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-11-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
